--- a/HexoStatic/css/mouseStyle.css
+++ b/HexoStatic/css/mouseStyle.css
@@ -1,9 +1,9 @@
 body {
-    cursor: url(https://cdn.jsdelivr.net/gh/stardust14/CDN@lastest/HexoStatic/img/default.cur),
+    cursor: url(https://cdn.jsdelivr.net/gh/stardust14/CDN/HexoStatic/img/default.cur),
         default;
 }
 a,
 img {
-    cursor: url(https://cdn.jsdelivr.net/gh/stardust14/CDN@lastest/HexoStatic/img/pointer.cur),
+    cursor: url(https://cdn.jsdelivr.net/gh/stardust14/CDN/HexoStatic/img/pointer.cur),
         default;
 }
